Fixing alignment for now, changes in Login, RideBook

--- a/src/client/src/RideConfirm/RideConfirm.css
+++ b/src/client/src/RideConfirm/RideConfirm.css
@@ -20,3 +20,8 @@
     text-align: left;
     margin: 0 0 0 8px;
 }
+
+.ride{
+    margin-left: auto;
+    width: 56%;
+}
